--- a/index.html
+++ b/index.html
@@ -58,5 +58,5 @@ limitations under the License.
     <span id="status">Standing by.</span>
   </div>
 
-  <script src='index.js'></script>
+  <script src='./index.js'></script>
 </body>
