Fix public url.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@ limitations under the License.
   <h1>
     TensorFlow.js Layers: Startup name generator demo
   </h1>
+  <h2>
+    <b>Warning:</b> This will freeze your browser for at least 30 seconds
+  </h2>
   <hr>
   <div class="create-model">
     <button id="load-pretrained-remote" style="display:none">Load hosted pretrained model</button>
